<resources>
    <string name="app_name">OneSpace</string>
    <string name="upload_to_onespace">上传到OneSpace</string>
    <string name="title_back">返回</string>
    <string name="ok">OK</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>
    <string name="warning">警告</string>
    <string name="paste">粘贴</string>
    <string name="modify">修改</string>
    <string name="modifying">正在修改&#8230;</string>
    <string name="modify_succeed">修改成功</string>
    <string name="modify_failed">修改失败</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="dialog_continue">继续</string>
    <string name="permission_denied">权限拒绝</string>
    <string name="connection_refused">无法连接到您的设备，请检查设备和网络状态！</string>
    <string name="network_not_available">当前网络不可用，请检查网络状态！</string>
    <string name="oneos_version_mismatch">您的OneSpace系统版本过低，请升级到 OneOS v4.x 版本！</string>
    <string name="fmt_oneos_version_upgrade" formatte="false">您的OneSpace系统版本过低，请升级到 OneOS v%s 以上版本！</string>
    <string name="oneos_version_check_failed">检测系统版本失败，请重新尝试！</string>
    <string name="tips_title_version_mismatch">系统版本不匹配</string>
    <string name="wifi_not_available">当前WiFi不可用，请检查WiFi状态！</string>
    <string name="goto_settings">设置</string>
    <string name="error_json_exception">协议解析失败</string>
    <string name="operate_failed">操作失败</string>
    <string name="app_exception">程序异常</string>
    <string name="please_login_onespace">请先登录OneSpace</string>
    <string name="please_login_onespace_with_admin">请使用管理员用户登录OneSpace</string>
    <string name="confirm_download_not_wifi">当前非Wi-Fi网络环境，继续下载将产生数据流量!</string>
    <string name="confirm_upload_not_wifi">当前非Wi-Fi网络环境，继续上传将产生数据流量!</string>
    <string name="app_exception_to_exit">异常，正在收集信息，3s后退出...</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="tips_exit_if_has_task">您有尚未完成的上传/下载任务，继续退出将会中断所有任务！</string>
    <string name="exit">退出</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="all_loaded">已加载全部</string>
    <string name="failed_get_upload_file">获取上传文件路径失败</string>
    <string name="perm_denied_storage">为保证App正常使用，请设置允许读、写手机存储</string>
    <string name="file_type_private">我的文件</string>
    <string name="file_type_public">公共目录</string>
    <string name="file_type_doc">文档</string>
    <string name="file_type_pic">图片</string>
    <string name="file_type_audio">音乐</string>
    <string name="file_type_video">视频</string>
    <string name="file_type_cycle">回收站</string>
    <string name="file_type_download">下载</string>
    <string name="file_type_app">安装包</string>
    <string name="file_type_share">共享</string>
    <string name="details_file">详情</string>
    <string name="open_file">打开</string>
    <string name="copy_file">复制</string>
    <string name="move_file">移动</string>
    <string name="delete_file">删除</string>
    <string name="rename_file">重命名</string>
    <string name="download_file">下载</string>
    <string name="upload_file">上传</string>
    <string name="encrypt_file">加密</string>
    <string name="decrypt_file">解密</string>
    <string name="extract_file">解压</string>
    <string name="chmod_file">权限</string>
    <string name="attr_file">详情</string>
    <string name="share_file">分享</string>
    <string name="more">更多</string>
    <string name="clean_recycle_file">清空回收站</string>
    <string name="tip_select_file">请先选择需要操作的文件</string>
    <string name="tip_attr_file">属性</string>
    <string name="getting_file_attr">正在获取&#8230;</string>
    <string name="file_attr_path">位置：</string>
    <string name="file_attr_size">大小：</string>
    <string name="file_attr_files">文件：</string>
    <string name="file_attr_folders">文件夹：</string>
    <string name="tail_file_attr_size_bytes">字节</string>
    <string name="tail_file_attr_folders">个文件夹</string>
    <string name="tail_file_attr_files">个文件</string>
    <string name="file_attr_permission">权限：</string>
    <string name="file_attr_uid">UID：</string>
    <string name="file_attr_gid">GID：</string>
    <string name="file_attr_read">可读：</string>
    <string name="file_attr_write">可写：</string>
    <string name="file_attr_time">时间：</string>
    <string name="tip_chmod_file">文件权限</string>
    <string name="chmod_file_group">同组用户：</string>
    <string name="chmod_file_other">其他用户：</string>
    <string name="permission_read">可读</string>
    <string name="permission_write">可写</string>
    <string name="tip_delete_file">确定删除所选文件？</string>
    <string name="deleting_file">正在删除&#8230;</string>
    <string name="delete_file_success">删除成功</string>
    <string name="delete_file_failed">删除失败</string>
    <string name="renaming_file">正在重命名&#8230;</string>
    <string name="tip_rename_file">重命名文件</string>
    <string name="hint_rename_file">请输入新的文件名</string>
    <string name="rename_file_success">重命名成功</string>
    <string name="rename_file_failed">重命名失败</string>
    <string name="making_folder">正在新建&#8230;</string>
    <string name="tip_new_folder">新建文件夹</string>
    <string name="hint_new_folder">请输入文件夹名</string>
    <string name="default_new_folder">新建文件夹</string>
    <string name="new_folder_success">新建文件夹成功</string>
    <string name="new_folder_failed">新建文件夹失败</string>
    <string name="encrypting_file">正在加密&#8230;</string>
    <string name="tip_encrypt_file">文件加密</string>
    <string name="warning_encrypt_file">警告：请牢记加密密码，否则将无法解密文件！</string>
    <string name="hint_encrypt_pwd">请输入加密密码</string>
    <string name="hint_confirm_encrypt_pwd">请确认加密密码</string>
    <string name="error_confirm_pwd">两次输入密码不一致</string>
    <string name="encrypt_file_success">文件加密成功</string>
    <string name="encrypt_file_failed">文件加密失败</string>
    <string name="decrypting_file">正在解密&#8230;</string>
    <string name="tip_decrypt_file">文件解密</string>
    <string name="hint_decrypt_pwd">请输入解密密码</string>
    <string name="decrypt_file_success">文件解密成功</string>
    <string name="decrypt_file_failed">文件解密失败</string>
    <string name="tip_move_file">移动到&#8230;</string>
    <string name="moving_file">正在移动&#8230;</string>
    <string name="chmod_ing_file">正在修改&#8230;</string>
    <string name="tip_upload_file">上传到&#8230;</string>
    <string name="move_file_success">文件移动成功</string>
    <string name="move_file_failed">文件移动失败</string>
    <string name="tip_copy_file">复制到&#8230;</string>
    <string name="copying_file">正在复制&#8230;</string>
    <string name="copy_file_success">文件复制成功</string>
    <string name="copy_file_failed">文件复制失败</string>
    <string name="title_clean_recycle_file">清空回收站</string>
    <string name="tip_clean_recycle_file">清空后，回收站所有文件将被永久删除。</string>
    <string name="cleaning_recycle">正在清空&#8230;</string>
    <string name="chmod_file_success">修改权限成功</string>
    <string name="clean_recycle_success">清空回收站成功</string>
    <string name="clean_recycle_failed">清空回收站失败</string>
    <string name="share_file_success">分享成功</string>
    <string name="clean_now">清空</string>
    <string name="nav_title_local">本地</string>
    <string name="nav_title_cloud">云盘</string>
    <string name="nav_title_transfer">传输</string>
    <string name="nav_title_tool">工具包</string>
    <string name="title_login">OneSpace登录</string>
    <string name="login">登录</string>
    <string name="login_qr">二维码登陆</string>
    <string name="title_qr">二维码扫描</string>
    <string name="title_enter_user">用户名</string>
    <string name="title_enter_pwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="title_select_ip">IP地址</string>
    <string name="title_enter_port">端口号</string>
    <string name="hint_enter_user">请输入用户名</string>
    <string name="hint_enter_pwd">请输入密码</string>
    <string name="hint_select_ip">请输入IP地址</string>
    <string name="hint_enter_port">请输入端口号</string>
    <string name="tip_invalid_port">请输入有效端口号</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="formating">正在格式化&#8230;</string>
    <string name="memeneting">正在开启服务&#8230;</string>
    <string name="scanning_device">搜索OneSpace&#8230;</string>
    <string name="tip_title_research">搜索设备</string>
    <string name="tip_search_again">未搜索到可用OneSpace，重新搜索？</string>
    <string name="research_now">重新搜索</string>
    <string name="getting_device_mac">获取Mac&#8230;</string>
    <string name="error_get_device_mac">获取Mac地址失败，请尝试重新登录</string>
    <string name="error_login_user_or_pwd">用户名或密码错误</string>
    <string name="failed_login">登录失败</string>
    <string name="remote_login">远程访问</string>
    <string name="tip_title_bond_ssudp">绑定SSUDP？</string>
    <string name="tip_bond_ssudp">绑定后，可以选择使用SSUDP访问设备！</string>
    <string name="binding">正在绑定&#8230;</string>
    <string name="ssudp_connecting">正在连接设备&#8230;</string>
    <string name="bind_now">立即绑定</string>
    <string name="bind_succeed">绑定成功</string>
    <string name="bind_failed">绑定失败</string>
    <string name="tip_title_bond_ssudp_failed">绑定SSUDP失败</string>
    <string name="tip_title_connect_ssudp_failed">连接设备失败</string>
    <string name="tip_bond_ssudp_failed">您的OneSpace暂不支持SSUDP服务，请联系官方技术支持！</string>
    <string name="tip_ssudp_open_file_failed">SSUDP登录不支持在线打开文件，请下载后查看！</string>
    <string name="tip_title_ssudp_disconnect">SSUDP连接已断开</string>
    <string name="tip_title_ssudp_connect">SSUDP已连接</string>
    <string name="hint_enter_ssupd_name">请输入设备名称</string>
    <string name="title_ssudp_name">设备名称</string>
    <string name="title_bind_ssudp">绑定SSUDP</string>
    <string name="unbind">解除绑定</string>
    <string name="ssudp_boned">SSUDP已绑定</string>
    <string name="tip_unbind_ssudp">确认解除绑定SSUDP？</string>
    <string name="unbind_succeed">解绑成功</string>
    <string name="root_dir_name_private">我的目录</string>
    <string name="root_dir_name_public">公共目录</string>
    <string name="root_dir_name_recycle">回收站</string>
    <string name="root_dir_name_sdcard">内存目录</string>
    <string name="root_dir_name_download">下载目录</string>
    <string name="root_dir_all">全部</string>
    <string name="action_upload_file">上&#160;传&#160;文&#160;件</string>
    <string name="action_new_folder">新建文件夹</string>
    <string name="file_order_time">按时间排序</string>
    <string name="file_order_name">按文件名排序</string>
    <string name="file_viewer_list">文件列表显示</string>
    <string name="file_viewer_grid">文件网格显示</string>
    <string name="hint_search">请输入要搜索的文件名</string>
    <string name="hint_select_file">请选择文件</string>
    <string name="select_all">全选</string>
    <string name="select_none">全不选</string>
    <string name="selected_item">已选择%s项</string>
    <string name="empty_file_list">该目录没有文件</string>
    <string name="error_access_dir_perm_deny">没有权限访问此目录</string>
    <string name="error_manage_perm_deny">没有权限</string>
    <string name="error_get_file_list">获取文件列表失败</string>
    <string name="fmt_time_line">yyyy年MM月</string>
    <string name="error_open_encrypt_file">很抱歉，无法查看加密文件</string>
    <string name="error_open_encrypt_pic">很抱歉，无法查看加密图片</string>
    <string name="error_app_not_found_to_open_file">未找到打开此文件的应用程序</string>
    <string name="gap_symbol">/</string>
    <string name="tip_start_download">开始下载: </string>
    <string name="tip_start_upload">开始上传: </string>
    <string name="download_list">下&#160;载</string>
    <string name="upload_list">上&#160;传</string>
    <string name="download_record">下载记录</string>
    <string name="downloading_list">正在下载</string>
    <string name="enter_url_hint">HTTP、FTP 或 Magnet</string>
    <string name="select_torrent">选择Torrent</string>
    <string name="download_to_onespace">下载到OneSpace</string>
    <string name="aria_download_tips">请填写需要下载的文件链接或上传种子文件</string>
    <string name="aria_download_path_tips">离线下载文件将保存在OneSpace公共目录Download中</string>
    <string name="save_settings">保存设置</string>
    <string name="aria_global_settings">离线下载设置</string>
    <string name="aria_upload_speed_limit">上传速度限制:</string>
    <string name="aria_download_speed_limit">下载速度限制:</string>
    <string name="aria_download_max_concurrent">并发数:</string>
    <string name="aria_download_piece_length">最小分片大小:</string>
</resources>