<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_local"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_page"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <com.eli.oneos.widget.TitleBackLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_tool_title_height"
        android:background="@color/bg_title" />

    <com.eli.oneos.widget.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/aria_download_tips"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <RelativeLayout
                android:id="@+id/layout_url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/editext_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btn_torrent"
                    android:background="@drawable/selector_square_stroke_edittext"
                    android:hint="@string/enter_url_hint"
                    android:inputType="textUri"
                    android:padding="10dp"
                    android:textSize="@dimen/text_size_mid" />

                <Button
                    android:id="@+id/btn_torrent"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/selector_button_bg_primary"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/select_torrent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_min" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/aria_download_path_tips"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_min" />

            <Button
                android:id="@+id/btn_download"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_button_bg_primary"
                android:gravity="center"
                android:text="@string/download_to_onespace"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_mid" />
        </LinearLayout>
    </com.eli.oneos.widget.ReboundScrollView>

    <TextView
        android:id="@+id/txt_offline_tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_gray"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/darker"
        android:textSize="@dimen/text_size_min"
        android:visibility="gone" />

</RelativeLayout>